--- a/TC_001_TechKriti/index.css
+++ b/TC_001_TechKriti/index.css
@@ -1,3 +1,10 @@
+body {
+  background-image: url("alpha-bg.jpg");
+  background-repeat: no-repeat;
+      background-size:  cover;
+  color: pink;
+
+}
 
  {
   z-index: 4;
