--- a/TC_001_TechKriti/index.css
+++ b/TC_001_TechKriti/index.css
@@ -1,18 +1,209 @@
+@media (max-width:960px){
+
+.toggle {
+  position: absolute;
+  color: black;
+  background-color: black;
+  border: none;
+  padding: 0;
+  margin: 0;
+  z-index: 1;
+  top: 3%;
+  left: 3%;
+}
+  #overlay {
+      position: absolute;
+      display: none;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,0.92);
+      z-index: 9999;
+      cursor: pointer;
+  }
+h2 {
+  color: white;
+}
+  #text{
+      display: inherit;
+      align-content: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      line-height: 50px;
+      font-size: 20px;
+      color: black;
+      transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+  }
+hr {
+  position: absolute;
+  left: -300%;
+
+  display: block;
+  width: 2px;
+  color: white;
+  width: 700%;
+padding: 0;
+margin: 0;
+  border-top: 2px solid white ;
+}
+
+
+  body {
+    background-image: url("alpha-bg.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
+       background-attachment: fixed;
+background-size: auto 100%;
+background-size: 100% 100%;
+
+
+  }
+
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .row {
+    width:98%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: 50px;
+  }
+  .imgbody {
+    width: 94%;
+  }
+  .column {
+    flex: 25%;
+    max-width: 25%;
+  }
+
+  .column{
+    vertical-align: bottom;
+  }
+  .imgbody{
+    margin-top: 6px;
+    margin-bottom: 7px;
+    vertical-align: bottom;
+  }
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  .lg {
+    margin-top: 2px;
+  }
+
+   .headertext{
+display: none;
+
+  }
+  .tophead {
+    width: 100%;
+    position: relative;
+    display: block;
+  }
+.header {
+  display: none;
+}
+.headcentre {
+  display: block;
+  width: 100%;
+}
+
+
+
+  .social {
+    width : 5%;
+    position: absolute;
+    top: 90%;
+
+  }
+
+  .face{
+    left: 45%;
+
+  }
+  .insta {
+    left: 55%;
+  }
+  .twit {
+    left: 65%;
+  }
+  .yout {
+    left: 75%;
+  }
+
+
+
+
+  .fb {
+    position: relative;
+    width: 60%;
+    left: 20%;
+align-content: center;
+align-items: center;
+align-self: center;
+   z-index: 99;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+
+
+
+
+}
+
+
+@media (min-width:960px){
+
+  .social {
+    width : 5%;
+    position: absolute;
+    right: 5%;
+
+  }
+
+  .face{
+    top: 30%;
+
+  }
+  .insta {
+    top: 45%;
+  }
+  .twit {
+    top: 60%;
+  }
+  .yout {
+    top: 75%;
+  }
+
+  .fb {
+    position: absolute;
+    width: 12%;
+    right: 5%;
+    top: 10%;
+    z-index: 99;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+#overlay {
+  display: none;
+}
+.toggle {
+display: none;
+}
 body {
   background-image: url("alpha-bg.jpg");
   background-repeat: no-repeat;
       background-size:  cover;
 
 }
-.bodytext {
-  position: absolute;
-  top: 20px;
-  transform: scaleX(1);
 
-}
-.block {
-  display: block;
-}
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -37,11 +228,10 @@ body {
   vertical-align: bottom;
 }
 .imgbody{
-  margin-top: 7px;
+  margin-top: 6px;
   margin-bottom: 7px;
   vertical-align: bottom;
 }
-/* Responsive layout - makes a two column-layout instead of four columns */
 .lg {
   margin-top: 2px;
 }
@@ -51,6 +241,7 @@ body {
   color: white;
   position: absolute;
   font-size: 13px;
+
 
 }
 
@@ -136,3 +327,55 @@ z-index: 0;
       top: 17px;
 
     }
+  }
+
+
+
+
+
+a {
+  color: white;
+}
+  .side{
+    transform: rotate(90deg);
+            position: absolute;
+            border: 3px white solid;
+            border-radius: 20%;
+            padding:5px 30px;
+            left: -56px;
+            top: 30%;
+            z-index: 1;
+            background: #212529;
+            color: white;
+            cursor: pointer;
+  }
+  .block {
+    position: relative;
+    transition: transform .2s;
+    cursor: pointer;
+  }
+  .block:hover  {
+    transform: scale(1.07);
+  }
+  .block:focus{
+    transform: scale(1.07);
+  }
+  .bodytext {
+    position: absolute;
+  font-weight: bold;
+   color: white;
+   left:2%;
+   top: 78%;
+font-size: 1.5vw;
+  }
+
+  .lg {
+    top: 85%;
+font-size: 2vw
+  }
+  .headertext:hover {
+    color: cyan;
+  }
+  .tophead {
+    cursor: pointer
+  }
