--- a/TC_001_TechKriti/index.css
+++ b/TC_001_TechKriti/index.css
@@ -54,10 +54,13 @@ margin: 0;
 
 
   body {
-    background-image: url("alpha-bg.jpg");
-    background-repeat: no-repeat;
-    background-size:cover;
-       background-attachment: fixed;
+    background-image: url("alpha-bg.jpg") no-repeat center center fixed;
+
+       -webkit-background-size: cover;
+ -moz-background-size: cover;
+ -o-background-size: cover;
+ background-size: cover;
+
 background-size: auto 100%;
 background-size: 100% 100%;
 
