--- a/TC_001_TechKriti/index.css
+++ b/TC_001_TechKriti/index.css
@@ -54,7 +54,7 @@ margin: 0;
 
 
   body {
-    background-image: url("alpha-bg.jpg") no-repeat center center fixed;
+    background: url("alpha-bg.jpg") no-repeat center center fixed;
 
        -webkit-background-size: cover;
  -moz-background-size: cover;
