--- a/TC_001_TechKriti/index.css
+++ b/TC_001_TechKriti/index.css
@@ -57,15 +57,14 @@
   }
 
   body {
+    background: url("alpha-bg.jpg") no-repeat center center fixed;
+    background-size: cover;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     height: 100%;
-         margin-left: 0px;
-         padding-left: 0px;
-         margin: 0%;
-         position: relative;
-         background: url(alpha-bg.jpg);
-         background-repeat: no-repeat;
-         background-size:cover;
-         background-attachment: fixed;
+
 
   }
 
@@ -128,6 +127,7 @@
     width: 5%;
     position: absolute;
     top: 90%;
+    z-index: 80;
   }
 
   .face {
