--- a/TC_001_TechKriti/index.css
+++ b/TC_001_TechKriti/index.css
@@ -3,7 +3,7 @@
   .toggle {
     position: absolute;
     color: black;
-    background-color: ;
+    background-color: black;
     border: none;
     padding: 0;
     margin: 0;
