--- a/TC_001_TechKriti/index.css
+++ b/TC_001_TechKriti/index.css
@@ -59,15 +59,11 @@ html {
   height: 100%;
 }
   body {
+    background: url("alpha-bg.jpg") no-repeat center center fixed;
+    background-size: cover;
+
+
     height: 100%;
-             margin-left: 0px;
-             padding-left: 0px;
-             margin: 0%;
-             position: relative;
-             background: url(alpha-bg.jpg);
-             background-repeat: no-repeat;
-             background-size:cover;
-             background-attachment: fixed;
 
 
   }
