--- a/TC_001_TechKriti/index.css
+++ b/TC_001_TechKriti/index.css
@@ -55,17 +55,14 @@
     margin: 0;
     border-top: 2px solid white;
   }
+
 html {
   height: 100%;
 }
   body {
     background: url("alpha-bg.jpg") no-repeat center center fixed;
     background-size: cover;
-
-
     height: 100%;
-
-
   }
 
   .row {
@@ -116,6 +113,7 @@ html {
 
   .header {
     display: none;
+    width: 100%;
   }
 
   .headcentre {
@@ -252,7 +250,7 @@ html {
   }
 
   .tophead {
-    width: 100vw;
+    width: 100%;
     position: relative;
     display: block;
   }
