--- a/form validation/styles.css
+++ b/form validation/styles.css
@@ -3,11 +3,20 @@ body{
     width: 500px;
     padding: 30px;
     background: #FFFFFF;
-    margin: 50px auto;
+    margin: 10px auto;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
 
 
 }
+
+small {
+  color: red;
+  font-size:10px;
+  margin: 0;
+  padding: 0;
+}
+.vis {
+visibility: hidden;}
  h2{
     background: #4D4D4D;
     color: grey;
@@ -21,11 +30,12 @@ input {
     outline: none;
     display: block;
     width: 100%;
-    padding: 7px;
+    padding: 3px 7px 0 7px;
     border: none;
     border-bottom: 1px solid #ddd;
     background: transparent;
-    margin-bottom: 10px;
+    margin: 0;
+    margin-top: 2px;
     font: 16px Arial, Helvetica, sans-serif;
     height: 45px;
 }
