--- a/form validation/styles.css
+++ b/form validation/styles.css
@@ -45,6 +45,10 @@ input {
     font: 16px Arial, Helvetica, sans-serif;
     height: 45px;
 }
+input:focus {
+  box-shadow: 0px 0px 20px rgba(66, 134,244, 0.6);
+
+}
 
  input[type="submit"]{
 
@@ -55,6 +59,7 @@ input {
     font-size: 18px;
     padding: 8px 18px;
     text-decoration: none;
+    border-radius: 20px;
 }
 .hi:hover {
     background-color:#34CACA;
@@ -73,5 +78,5 @@ input {
 h4 {
   padding: 0;
   margin: 0;
-  
+
 }
