--- a/formvalidation/styles.css
+++ b/formvalidation/styles.css
@@ -1,4 +1,8 @@
-body{
+html {
+  height: 100%;
+}
+  body{
+    height: 100%;
     font-family: 'Open Sans Condensed', sans;
     width: 100%;
     max-width: 500px;
