--- a/formvalidation/styles.css
+++ b/formvalidation/styles.css
@@ -2,6 +2,10 @@ html {
   height: 100%;
 }
   body{
+    background: #ad5389;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     height: 100%;
     font-family: 'Open Sans Condensed', sans;
     width: 100%;
