--- a/formvalidation/styles.css
+++ b/formvalidation/styles.css
@@ -40,6 +40,7 @@ color: red;
     margin: -30px -30px 30px -30px;
 }
 input {
+  transition-duration: 1s;
     box-sizing: border-box;
     outline: none;
     display: block;
