--- a/formvalidation/styles.css
+++ b/formvalidation/styles.css
@@ -11,9 +11,9 @@ background: linear-gradient(to right, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, F
     font-family: 'Open Sans Condensed', sans;
     width: 100%;
     max-width: 500px;
-    padding: 30px;
+    padding: 30px 30px 0 30px;
     background: #FFFFFF;
-    margin: 10px auto;
+    margin:  auto;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
 }
 
@@ -53,7 +53,7 @@ input {
     margin: 0;
     margin-top: 2px;
     font: 16px Arial, Helvetica, sans-serif;
-    height: 45px;
+    height: 40px;
 }
 input:focus {
   box-shadow: 0px 0px 20px rgba(66, 134,244, 0.6);
