--- a/formvalidation/styles.css
+++ b/formvalidation/styles.css
@@ -13,7 +13,7 @@ background: linear-gradient(to right, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, F
     max-width: 500px;
     padding: 30px 30px 0 30px;
     background: #FFFFFF;
-    margin:  auto;
+    margin:  0 auto 0 auto;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
 }
 
