--- a/team memberwsview/sample 1/css/base.css
+++ b/team memberwsview/sample 1/css/base.css
@@ -206,6 +206,7 @@ main {
 .grid__item:hover .box__title-inner::before {
 	height: 100%;
 	width: 100%;
+
 }
 
 .box__text {
@@ -238,7 +239,7 @@ main {
 	margin: 0 auto;
 	max-width: 100%;
 	filter: grayscale(1);
-	transition: filter 0.3s;
+	transition: all 0.3s;
 	pointer-events: none;
 }
 
@@ -344,7 +345,10 @@ main {
 	opacity: 0;
 }
 
-.overlay__close:focus {
+.overlay__climg:hover {
+	transform: scale(2);
+
+}ose:focus {
 	outline: none;
 }
 
@@ -353,6 +357,9 @@ main {
 	line-height: 1.5;
 	max-width: 25rem;
 	margin: 1rem 0 0 10vw;
+}img:hover {
+	transform: scale(2);
+
 }
 
 @media screen and (min-width: 55em) {
@@ -393,7 +400,10 @@ main {
 	}
 	.box__text--topcloser {
 		top: -5rem;
-	}
+	}img:hover {
+	transform: scale(2);
+
+}
 	.box__text--bottom {
 		bottom: -5rem;
 		top: auto;
@@ -486,7 +496,10 @@ main {
 		display: block;
 		margin: 1em auto;
 	}
-	.codrops-links {
+	.codrops-limg:hover {
+	transform: scale(2);
+
+}inks {
 		margin: 0;
 	}
 }
