--- a/wall.js/demo/index.css
+++ b/wall.js/demo/index.css
@@ -62,6 +62,8 @@ span.hl {
   color: #fff;
   margin: 10px;
   cursor: pointer;
+  transition-duration: 0.5s;
+
 }
 
 .nav-link::after {
@@ -80,15 +82,19 @@ span.hl {
 .nav-link.active::after {
   width: 100%;
 }
+.nav-link.active{
+  font-size: 1.3sem;
+}
 
 .section {
   padding: 70px 20px 30px 20px;
 }
 .section p{
-  visibility: hidden;
+  opacity: 0;
+  /* visibility: hidden; */
 }
 .section h5{
-  visibility: hidden;
+opacity: 0;
 }
 
 @media (max-width: 650px) {
@@ -115,14 +121,35 @@ span.hl {
 .current h1 {
   opacity: 1;
   transform: translateY(0);
-}
+  -webkit-animation: blurFadeIn 1s ease-in 0.7s backwards;
 
+}
+@keyframes blurFadeIn{
+	0%{
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		transform: scale(1.5);
+	}
+	/* 50%{
+		opacity: 0.5;
+		text-shadow: 0px 0px 10px #fff;
+		transform: scale(1.2);
+	} */
+	100%{
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		transform: scale(1);
+	}
+}
 .current p {
-visibility: visible;
+opacity: 1;
+transition-duration: 1s;
 }
 
 .current h5 {
-visibility: visible;
+  opacity: 1;
+  tra
+  transition-duration: 1s;
 }
 
 .section-1 {
@@ -206,9 +233,9 @@ visibility: visible;
   position: absolute;
   color: white;
   font-size: 20px;
-  font-size: 5em;
+  font-size: 3em;
   left: 100px;
-  transition-duration: 1s;
+  transition-duration: 0.3s;
 
   bottom: 50px;
   z-index: 3;
@@ -219,17 +246,22 @@ visibility: visible;
 #next {
   position: absolute;
   font-size: 20px;
-  font-size: 5em;
+  font-size: 3em;
   font-weight: bolder;
   color: white;
-  transition-duration: 1s;
+  transition-duration: 0.3s;
   right: 100px;
   bottom: 50px;
   z-index: 3;
   cursor: pointer;
 }
+#next:hover {
+  transform: scale(1.5);
+}
 
-
+#prev:hover {
+  transform: scale(1.5);
+}
 .dot {
   position: absolute;
   top: 50%;
@@ -250,11 +282,13 @@ visibility: visible;
   box-sizing: border-box;
   list-style: none;
   cursor: pointer;
+  transition-duration: 0.7s;
 }
 
 .dot>li.active,
 .dot>li:hover {
   background-color: #fff;
+  transform: scale(1.5);
 }
 
 .prev-slide,
