--- a/wall.js/demo/index.css
+++ b/wall.js/demo/index.css
@@ -326,16 +326,54 @@ transition-duration: 1s;
 
 
 @media (max-width: 650px) {
-  #prev,#next {
+  #prev {
+    position: absolute;
+    font-size: 20px;
+    font-size: 3em;
+    font-weight: bolder;
+    color: white;
+    transition-duration: 0.3s;
+    bottom: 50px;
+    z-index: 3;
+    cursor: pointer;
     left: 2%;
     bottom: 2%;
 
   }
+  #next {
+    position: absolute;
+    right: 2%;
+    bottom: 2%;
+    position: absolute;
+    font-size: 20px;
+    font-size: 3em;
+    font-weight: bolder;
+    color: white;
+    transition-duration: 0.3s;
+    right: 100px;
+    bottom: 50px;
+    z-index: 3;
+    cursor: pointer;
+    right: 2%;
+    bottom: 2%;
+  }
+
 
   .dot {
+    position: absolute;
     top: 50%;
     right: 2%;
 
   }
-
+  .section h1 {
+    margin-bottom: 10px;
+    margin-top: 0;
+    text-shadow: 2px 2px 5px #333;
+    text-align: center;
+    font-size: 60px;
+    font-weight: 700;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all .5s ease-in-out 0.5s;
+  }
 }
