--- a/wall.js/demo/index.css
+++ b/wall.js/demo/index.css
@@ -129,13 +129,13 @@ opacity: 0;
 	0%{
 		opacity: 0;
 		text-shadow: 0px 0px 40px #fff;
-		transform: scale(1.5);
+		transform: scale(1.6);
 	}
 	/* 50%{
-		opacity: 0.5;
+		opacity: 0.3;
 		text-shadow: 0px 0px 10px #fff;
 		transform: scale(1.2);
-	} */
+	}  */
 	100%{
 		opacity: 1;
 		text-shadow: 0px 0px 1px #fff;
@@ -418,6 +418,6 @@ animation-delay: 0s;
   }
   .section:first-of-type h1 {
     margin-top: 20%;
-    font-size: 100px;
+    font-size: 3.75em;
   }
 }
