--- a/wall.js/demo/index.css
+++ b/wall.js/demo/index.css
@@ -50,11 +50,7 @@ span.hl {
   background: none;
 }
 
-@media (max-width: 650px) {
-  .nav {
-    display: none;
-  }
-}
+
 
 .nav-link {
   position: relative;
@@ -420,4 +416,61 @@ animation-delay: 0s;
     margin-top: 20%;
     font-size: 3.75em;
   }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+font-size: 1.6em;
+align-content: flex-start;
+font-weight: bolder;
+transition-duration: 1s;
+background-color: rgba(0,0,0,0.5)
+  }
+  .nav-link {
+    transition-duration: 1s;
+
+align-self: flex-start;
+margin-bottom: 15px;
+
+  }
+  .dog {
+    display: block;
+    position: absolute;
+      top: 1%;
+      right: 1%;
+      background: none;
+      width: 60px;
+      z-index: 99;
+
+
+  }
+
+  .bar1, .bar2, .bar3 {
+      width: 35px;
+      height: 5px;
+      background-color: white;
+      margin: 6px 0;
+      transition: 0.4s;
+      border-radius: 10px;
+  }
+
+  /* Rotate first bar */
+  .change .bar1 {
+      -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+      transform: rotate(-45deg) translate(-9px, 6px) ;
+  }
+
+  /* Fade out the second bar */
+  .change .bar2 {
+      opacity: 0;
+  }
+
+  /* Rotate last bar */
+  .change .bar3 {
+      -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+      transform: rotate(45deg) translate(-8px, -8px) ;
+  }
+.notnow {
+  display: none;
+}
 }
