finished for today

--- a/wall.js/demo/index.css
+++ b/wall.js/demo/index.css
@@ -409,7 +409,7 @@ margin-right: 0.5%;
     opacity: 1;
     font-size: 2em;
     transform: translateY(0);
-    -webkit-animation: blurFadeIn 0.5s ease-in 0.2s backwards;
+    -webkit-animation: blurFadeIn 0.5s ease-in 0.1s backwards;
 
   }
   .section:first-of-type h1 {
@@ -427,8 +427,11 @@ transition-duration: 1s;
 background-color: rgba(0,0,0,0.5);
 background-size: cover;
 height: 100%;
+transition-duration: 0.5s;
+
   }
   .nav-link {
+    transition-duration: 0.5s;
     /* transition-duration: 0.5s; */
     -webkit-animation-name: spaceInLeft;
             animation-name: spaceInLeft;
