--- a/secAvartan18/css/customchanges.css
+++ b/secAvartan18/css/customchanges.css
@@ -1,3 +1,55 @@
+#gallery > li {
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+}
+
+#gallery > li:hover {
+transform: scale(1.5);
+z-index: 5;
+-webkit-box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
+-moz-box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
+box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
+
+
+
+
+}
+
+
+#gallh, #gallp{
+  position: absolute;
+  z-index: 9;
+  background-color: rgba(0,0,0,0.8);
+
+  margin: 0;
+  color: white;
+/*
+  text-shadow: 0px 0px 77px 27px rgba(255,255,255,0.72);
+  */
+
+
+	text-shadow: 0px 0px 16px rgba(255, 255, 255, 0.8);
+
+
+
+}
+#gallh {
+font-size: 2em;
+top: 15%;
+padding: 10px 30px;
+}
+
+#gallp {
+top: 35%;
+font-size: 0.8em;
+padding: 8px 5px;
+
+}
+#gallp strong {
+color: white;
+font-size: 1.2em;
+}
+
 section {
   /* padding: 0; */
   height: 100vh;
