--- a/AavartanBeta18/css/customchanges.css
+++ b/AavartanBeta18/css/customchanges.css
@@ -1,9 +1,9 @@
-#gallery > li {
+#gallery li {
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
 }
 
-#gallery > li:hover {
+#gallery li:hover {
 transform: scale(1.5);
 z-index: 5;
 -webkit-box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
@@ -14,6 +14,28 @@ box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
 
 
 }
+
+
+
+#gallery  li:active {
+transform: scale(1.5);
+z-index: 5;
+-webkit-box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
+-moz-box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
+box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
+
+}
+
+
+#gallery  li:focus {
+transform: scale(1.5);
+z-index: 5;
+-webkit-box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
+-moz-box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
+box-shadow: 0px 0px 77px 27px rgba(0,0,0,0.72);
+
+}
+
 
 
 #gallh, #gallp{
