--- a/AavartanBeta18/css/cardio.css
+++ b/AavartanBeta18/css/cardio.css
@@ -61,6 +61,7 @@ h6 {
 	font-family: 'Roboto', 'Avenir Next', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
 	position: relative;
 	margin: 10px 0;
+	margin-bottom: 0;
 }
 
 h1 {
