--- a/AavartanBeta18/css/team.css
+++ b/AavartanBeta18/css/team.css
@@ -255,11 +255,14 @@ transform: scale(1.4);
     -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
     clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
     transform: translateX(-50%);
-    transition: all 0.3s cubic-bezier(0.5, 0.2,0.1,0.9);
+    transition: all 0.3s cubic-bezier(0.5, 0.2,0.1,0.9) 0.2s;
+    display: none;
 }
 .our-team:hover .team-content{
     bottom: 10px;
     opacity: 0.8;
+    display: inline-block;
+
 }
 .our-team .title{
     font-size: 1.5em;
