--- a/formvalidation/styles.css
+++ b/formvalidation/styles.css
@@ -1,92 +1,94 @@
 html {
   height: 100%;
-  background: #ad5389;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  background: #ad5389; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #3c1053,
+    #ad5389
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #3c1053,
+    #ad5389
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-  body{
-
-    height: 100%;
-    font-family: 'Open Sans Condensed', sans;
-    width: 100%;
-    max-width: 500px;
-    padding: 30px 30px 0 30px;
-    background: #FFFFFF;
-    margin:  0 auto 0 auto;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
+body {
+  height: 100%;
+  font-family: "Open Sans Condensed", sans;
+  width: 100%;
+  max-width: 500px;
+  padding: 30px 30px 0 30px;
+  background: #ffffff;
+  margin: 0 auto 0 auto;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
 }
 
 small {
   color: grey;
-  font-size:10px;
+  font-size: 10px;
   margin: 0;
   padding: 0;
   visibility: hidden;
 }
 .no {
   visibility: visible;
-color: red;
+  color: red;
 }
 .yes {
   visibility: visible;
   color: grey;
 }
- h2{
-    background: #4D4D4D;
-    color: white;
-    font-size: 20px;
-    font-weight: 100;
-    padding: 20px;
-    margin: -30px -30px 30px -30px;
+h2 {
+  background: #4d4d4d;
+  color: white;
+  font-size: 20px;
+  font-weight: 100;
+  padding: 20px;
+  margin: -30px -30px 30px -30px;
 }
 input {
   transition-duration: 1s;
-    box-sizing: border-box;
-    outline: none;
-    display: block;
-    width: 100%;
-    padding: 3px 7px 0 7px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-    background: transparent;
-    margin: 0;
-    margin-top: 2px;
-    font: 16px Arial, Helvetica, sans-serif;
-    height: 40px;
+  box-sizing: border-box;
+  outline: none;
+  display: block;
+  width: 100%;
+  padding: 3px 7px 0 7px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background: transparent;
+  margin: 0;
+  margin-top: 2px;
+  font: 16px Arial, Helvetica, sans-serif;
+  height: 40px;
 }
 input:focus {
-  box-shadow: 0px 0px 20px rgba(66, 134,244, 0.6);
-
+  box-shadow: 0px 0px 20px rgba(66, 134, 244, 0.6);
 }
 
- input[type="submit"]{
-
-    box-shadow: inset 0px 1px 0px 0px blue;
-    border: 1px solid #27A0A0;
-    display: inline-block;
-    cursor: pointer;
-    font-size: 18px;
-    padding: 8px 18px;
-    text-decoration: none;
-    border-radius: 20px;
+input[type="submit"] {
+  box-shadow: inset 0px 1px 0px 0px blue;
+  border: 1px solid #27a0a0;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 8px 18px;
+  text-decoration: none;
+  border-radius: 20px;
 }
 .hi:hover {
-    background-color:#34CACA;
+  background-color: #34caca;
 }
 .disable {
-  cursor : not-allowed;
+  cursor: not-allowed;
   color: white;
   background-color: red;
 }
-.hi{
-  background-color: #2CBBBB;
+.hi {
+  background-color: #2cbbbb;
 
-  color: #FFFFFF;
-
+  color: #ffffff;
 }
 h4 {
   padding: 0;
   margin: 0;
-
 }
